--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/loguito.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Somos un pequeño grupo de dispatchers con amplia experiencia en
+      cargas secas, refrigeradas, así como flat bed, enfocados en buscar y
+      negociar el mejor precio con los brokers y ofrecerle tanto a dueños
+      de camiones como pequeñas compañías un servicio de calidad y
+      profesionalismo."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/loguito.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +28,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>dispatch305</title>
+    <head>
+      <meta property="og:title" content="dispatch305" />
+      <meta property="og:description" content="Somos un pequeño grupo de dispatchers con amplia experiencia en
+      cargas secas, refrigeradas, así como flat bed, enfocados en buscar y
+      negociar el mejor precio con los brokers y ofrecerle tanto a dueños
+      de camiones como pequeñas compañías un servicio de calidad y
+      profesionalismo." />
+    </head>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
